update remaining G+ links

--- a/docs/releases/v4_0_0.md
+++ b/docs/releases/v4_0_0.md
@@ -5,7 +5,7 @@ slug: v4-0-0
 
 We're happy to announce that after months of intense development, v4-beta of ServiceStack has finally been released to NuGet! 
 
-As [announced in August](https://plus.google.com/+DemisBellot/posts/g8TcZaE7bv9) to ensure it's continued development, ServiceStack has moved to a self-sustaining commercial model for commercial usage of ServiceStack from **v4+ onwards**. It's the first time we've been able to commit full-time resources to the project and is what has ensured continued investment and enabled v4 to be possible, with even more exciting features in the pipeline and roadmap for 2014.
+As announced in August to ensure it's continued development, ServiceStack has moved to a self-sustaining commercial model for commercial usage of ServiceStack from **v4+ onwards**. It's the first time we've been able to commit full-time resources to the project and is what has ensured continued investment and enabled v4 to be possible, with even more exciting features in the pipeline and roadmap for 2014.
 
 #### Free Usage for Small and OSS Projects
 
