Update OrmLite docs

--- a/docs/releases/v4_0_11.md
+++ b/docs/releases/v4_0_11.md
@@ -24,7 +24,7 @@ MySqlDialect.Provider.StringSerializer = new JsonDataContractSerializer();
 OracleDialect.Provider.StringSerializer = new XmlSerializableSerializer();
 ```
 You can also provide a custom serialization strategy by implementing 
-[IStringSerializer](https://github.com/ServiceStack/ServiceStack.Text/blob/master/src/ServiceStack.Text/IStringSerializer.cs).
+[IStringSerializer](https://github.com/ServiceStack/ServiceStack/blob/main/ServiceStack.Text/src/ServiceStack.Text/IStringSerializer.cs).
 
 By default all dialects use the existing JsvStringSerializer, except for PostgreSQL which due to its built-in support for JSON, now uses the JSON format by default.  
 
