--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -214,7 +214,7 @@ Thanks to Eaton from the ServiceStack Community for [reporting issues with Defla
 
 ### /types/js now cached in production
 
-Given the primary usecase for the new [JavaScrip Language support](#instant-typed-javascript-dtos-🚀) is to enable instant access to Typed APIs using a `<script>` reference in HTML Pages, it's now cached by default in non **DebugMode** configurations for improved runtime performance.
+Given the primary usecase for the new [JavaScript Language support](#instant-typed-javascript-dtos-🚀) is to enable instant access to Typed APIs using a `<script>` reference in HTML Pages, it's now cached by default in non **DebugMode** configurations for improved runtime performance.
 
 Should it be needed, uncached JS DTOs can be accessed with `/types/js?cache=false`.
 
