--- a/docs/releases/v4_5_14.md
+++ b/docs/releases/v4_5_14.md
@@ -110,7 +110,7 @@ Within this minimal syntax we've been able to achieve a highly versatile dynamic
 Even in this initial release we're extremely pleased with its current form, we've spent less time developing Templates than we have on ServiceStack's Razor Integration and we've already innovated past what we've been capable to do with Razor. It's not coupled to any external tooling or susceptible to any of the external factors that has plagued us with Razor. It's highly testable by design with unit tests being trivial to write that it's our most tested feature with over 350 new tests added to support its current feature-set, it's also our [most documented feature](https://sharpscript.net). 
 
 It's small, lightweight footprint and built-in [Hot Reloading](https://sharpscript.net/docs/hot-reloading) provides a fun, clean and productive alternative to MVC Razor that's easily 
-[integrated into any web framework](https://sharpscript.net/docs/sharp-pages) and runs identically in [every platform ServiceStack runs on](https://sharpscript.net/docs/sharp-pages#runs-everywhere), it can also be returned in [ASP.NET MVC](https://sharpscript.net/docs/mvc-netcore#aspnet-mvc--templates-demo) and [ASP.NET MVC Core](https://sharpscript.net/docs/mvc-netcore) Controllers - in all cases, using the same [high-performance implementation](https://sharpscript.net/docs/introduction#instant-startup) to asynchronously write to a forward-only OutputStream for max performance and maximum potential reuse of your code.
+[integrated into any web framework](https://sharpscript.net/docs/script-pages) and runs identically in [every platform ServiceStack runs on](https://sharpscript.net/docs/script-pages#runs-everywhere), it can also be returned in [ASP.NET MVC](https://sharpscript.net/docs/mvc-netcore#aspnet-mvc--templates-demo) and [ASP.NET MVC Core](https://sharpscript.net/docs/mvc-netcore) Controllers - in all cases, using the same [high-performance implementation](https://sharpscript.net/docs/introduction#instant-startup) to asynchronously write to a forward-only OutputStream for max performance and maximum potential reuse of your code.
 
 Templates are lazily loaded and [late-bound](https://sharpscript.net/docs/introduction#late-bound) for Instant Startup, doesn't require any pre-compilation, have coupling to any external configuration files, build tools, designer tooling or have any special deployment requirements. It can be used as a general purpose templating language to enhance [any text format](https://sharpscript.net/docs/page-formats) and includes built-in support for `.html`.
 
@@ -791,7 +791,7 @@ var hasFoo = container.Exists<IFoo>();
 ```
 
 Both `Funq.Container` and `SimpleContainer` implement the `IContainer` interface which 
-[ServiceStack's SharpPagesFeature](https://sharpscript.net/docs/sharp-pages) utilizes to replace the TemplateContext's built-in IOC to use Funq where it shares the same IOC instance and is able to resolve ServiceStack's AppHost dependencies.
+[ServiceStack's SharpPagesFeature](https://sharpscript.net/docs/script-pages) utilizes to replace the TemplateContext's built-in IOC to use Funq where it shares the same IOC instance and is able to resolve ServiceStack's AppHost dependencies.
 
 ### Fast, small, dependency-free IOC
 
