--- a/docs/releases/v5_0_0.md
+++ b/docs/releases/v5_0_0.md
@@ -224,7 +224,7 @@ public class AuthServices : Service
 }
 ```
 
-Which are all configured to listen on the same **http://localhost:5000** address.
+Which are all configured to listen on the same `http://localhost:5000` address.
 
 ## Client Apps
 
@@ -654,7 +654,7 @@ The Webpack templates have been updated to utilize [Webpack's DllPlugin](https:/
  
     $ npm run dev
 
-Which will watch and re-compile your App for any changes. These new templates also include a new hot-reload feature which works similar to [#Script Pages hot-reloading](https://sharpscript.net/docs/hot-reloading) where in **DebugMode** it will long poll the server to watch for any modified files in `/wwwroot` and automatically refresh the page. This provides a hot-reload alternative to `npm run dev-server` to run a Webpack Dev Server proxy on port http://localhost:3000 
+Which will watch and re-compile your App for any changes. These new templates also include a new hot-reload feature which works similar to [#Script Pages hot-reloading](https://sharpscript.net/docs/hot-reloading) where in **DebugMode** it will long poll the server to watch for any modified files in `/wwwroot` and automatically refresh the page. This provides a hot-reload alternative to `npm run dev-server` to run a Webpack Dev Server proxy on port `http://localhost:3000`
 
 ### Configured with `#Script`
  
@@ -1226,7 +1226,7 @@ public class CustomFeedView { ... }
 
 ### #Script Pages
 
-[#Script Pages](https://sharpscript.net/docs/sharp-pages) gains support for the last missing feature from ServiceStack.Razor with its new **View Pages** support which lets you use `.html` Template Pages to render the HTML for Services Responses. 
+[#Script Pages](https://sharpscript.net/docs/script-pages) gains support for the last missing feature from ServiceStack.Razor with its new **View Pages** support which lets you use `.html` Template Pages to render the HTML for Services Responses. 
 
 It works similarly to Razor ViewPages where it uses first matching View Page with the Response DTO is injected as the `Model` property. The View Pages can be in any folder within the `/Views` folder using the format `{PageName}.html` where `PageName` can be either the **Request DTO** or **Response DTO** Name, but all page names within the `/Views` folder need to be unique.
 
@@ -1370,7 +1370,7 @@ The MVC HTML Helpers for ASP.NET ServiceStack.Razor has been moved to the **Serv
 
 #### #Script Pages
 
-If you were using Markdown Razor we recommend using the superior, cleaner, faster and more flexible alternative in [#Script Pages](https://sharpscript.net/docs/sharp-pages) which easily supports Markdown Razor's most redeeming feature of being able to mix .NET in Markdown by utilizing its [Transformers](https://sharpscript.net/docs/transformers) feature.
+If you were using Markdown Razor we recommend using the superior, cleaner, faster and more flexible alternative in [#Script Pages](https://sharpscript.net/docs/script-pages) which easily supports Markdown Razor's most redeeming feature of being able to mix .NET in Markdown by utilizing its [Transformers](https://sharpscript.net/docs/transformers) feature.
 
 #### Markdown Config
 
