--- a/docs/releases/v5_2.md
+++ b/docs/releases/v5_2.md
@@ -2030,7 +2030,7 @@ accessed directly from Kestrel, they had a negative impact on page download spee
 the current recommendation for hosting .NET Core Web Apps.
 
 As they don't yield performance improvements universally, Template Pages served by
-[ServiceStack's SharpPageFeature](https://sharpscript.net/docs/sharp-pages) are now buffered before being written to the
+[ServiceStack's SharpPageFeature](https://sharpscript.net/docs/script-pages) are now buffered before being written to the
 HTTP OutputStream (using a pooled MemoryStream), this change also makes Template Pages more flexible which can implement features like
 Dynamic Sharp APIs that weren't possible before.
 
@@ -2727,7 +2727,7 @@ Template Content its sent and returns the output:
 :::
 
 By default the `evalTemplate` filter renders Templates in a new `TemplateContext` which can be customized to utilize any additional
-`plugins`, `filters` and `blocks` available in the configured [SharpPagesFeature](https://sharpscript.net/docs/sharp-pages),
+`plugins`, `filters` and `blocks` available in the configured [SharpPagesFeature](https://sharpscript.net/docs/script-pages),
 or for full access you can use `{use:{context:true}}` to evaluate any Template content under the same context that `evalTemplate` is run on.
 
 ## Templates Admin Service
