--- a/docs/releases/v5_6.md
+++ b/docs/releases/v5_6.md
@@ -189,7 +189,7 @@ Most ServiceStack features are encapsulated within [Plugins](/plugins) which are
 adding a declarative class instance to the `Plugins` collection. Plugins encapsulate the entire feature, taking care of all IOC 
 registrations and how to configure itself with ServiceStack.
 
-So if you wanted to enable [#Script Pages](https://sharpscript.net/docs/sharp-pages) (alternative to MVC) and give all pages
+So if you wanted to enable [#Script Pages](https://sharpscript.net/docs/script-pages) (alternative to MVC) and give all pages
 access to OrmLite's DB functionality - it can all be configured with a single declarative expression:
 
 ```csharp
@@ -695,7 +695,7 @@ namespace MyApp
 ```
 
 The configuration is declarative where it only runs `Configure(IAppHost appHost)` in ServiceStack Apps and only adds the `RedisScripts`
-if it's configured with [#Script Pages](https://sharpscript.net/docs/sharp-pages), otherwise any additional configuration is inert and isn't run.
+if it's configured with [#Script Pages](https://sharpscript.net/docs/script-pages), otherwise any additional configuration is inert and isn't run.
 
 Typically DB's will require you to specify your App DB's connection string to your external DB (with a default fallback) - where typically the
 most effort required to enable a feature is adding a Connection String in your `appsettings.json`.
@@ -1475,7 +1475,7 @@ it includes additional "wrapper" HTML tags around each component.
 
 ### `#Script` Pages
 
-In [#Script Pages](https://sharpscript.net/docs/sharp-pages) you can use render the `navbar` and `navButtonGroup` methods to render NavItems:
+In [#Script Pages](https://sharpscript.net/docs/script-pages) you can use render the `navbar` and `navButtonGroup` methods to render NavItems:
 
 #### Navbar
 
@@ -2028,7 +2028,7 @@ Or in Razor with:
 
 ## Using SVG images in `#Script`
 
-In [#Script Pages](https://sharpscript.net/docs/sharp-pages) you can embed SVG xml with the `svgImage` and `svgDataUri` scripts:
+In [#Script Pages](https://sharpscript.net/docs/script-pages) you can embed SVG xml with the `svgImage` and `svgDataUri` scripts:
 
 ::: v-pre
 ```hbs
@@ -2094,7 +2094,7 @@ Or inside a CSS class:
 
 ### Server Controls
 
-Use these `#Script` methods to reference and modify individual SVG images in [#Script Pages](https://sharpscript.net/docs/sharp-pages):
+Use these `#Script` methods to reference and modify individual SVG images in [#Script Pages](https://sharpscript.net/docs/script-pages):
 
 ```csharp
 svgImage(string name) => Svg.GetImage(name)
