--- a/docs/releases/v5_7.md
+++ b/docs/releases/v5_7.md
@@ -16,7 +16,7 @@ The primary issue in supporting .NET Core 3 was accommodating its decision to di
 are first written to a pooled `MemoryStream` before being asynchronously written to the Response's Output Stream.
 
 Essentially all Content Type Serializers (i.e. Serialization Formats) used in ServiceStack other than HTML View Engines 
-(Razor/Markdown/JSON Report) and [#Script Pages](https://sharpscript.net/docs/sharp-pages) (written from ground-up to support async writes) 
+(Razor/Markdown/JSON Report) and [#Script Pages](https://sharpscript.net/docs/script-pages) (written from ground-up to support async writes) 
 are currently buffered in .NET Core 3. (we'll look into extending native async serialization support to our own serializers in a future release).
 
 .NET Core 3 does allow you to [turn off this restriction on a per-request basis](https://github.com/aspnet/AspNetCore/issues/7644)
@@ -1083,7 +1083,7 @@ only uses the `double` numeric type and doesn't contain .NET Scripting support.
 [ScriptLisp](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack.Common/Script/ScriptLanguage.Lisp.cs) is an
 enhanced version of [Nukata Lisp](https://github.com/nukata/lisp-in-cs) with a number of new features
 that reuses `#Script` existing scripting capabilities to provide seamless integration with both the rest of `#Script`
-(see [Language Blocks an Expressions](http://localhost:5000/docs/syntax#language-blocks-and-expressions))
+(see [Language Blocks an Expressions](https://sharpscript.net/docs/syntax#language-blocks-and-expressions))
 and .NET including [Scripting of .NET Types](https://sharpscript.net/docs/script-net), support for all .NET numeric types and access to its comprehensive 
 library of over **1000+** [Script Methods](https://sharpscript.net/docs/methods) - optimally designed for accessing .NET functionality from a dynamic language.
 
@@ -1131,7 +1131,7 @@ defined lisp functions, macros and variables:
 Here's an annotated version of the demo below which explains what each of the different expressions is doing.
 
 Just like [Sharp Scripts](https://sharpscript.net/docs/sharp-scripts) and [Sharp Apps](https://sharpscript.net/docs/sharp-apps) the Lisp REPL runs within the 
-[#Script Pages](https://sharpscript.net/docs/sharp-pages) ScriptContext [sandbox](https://sharpscript.net/docs/sandbox) that when run from a Sharp App folder, 
+[#Script Pages](https://sharpscript.net/docs/script-pages) ScriptContext [sandbox](https://sharpscript.net/docs/sandbox) that when run from a Sharp App folder, 
 starts a .NET Core App Server that simulates a fully configured .NET Core App. 
 In this case it's running in the [redis Sharp App](https://github.com/sharp-apps/redis) directory where it was able to access its static web assets
 as well as its redis-server connection configured in its [app.settings](https://github.com/sharp-apps/redis/blob/master/app.settings).
@@ -1308,7 +1308,7 @@ Then you can open a TCP Connection to connect to a new Lisp REPL with:
 
     $ rlwrap telnet localhost 5005
 
-Where you now have full scriptability of the running server as allowed by [#Script Pages](https://sharpscript.net/docs/sharp-pages) `SharpPagesFeature` which
+Where you now have full scriptability of the running server as allowed by [#Script Pages](https://sharpscript.net/docs/script-pages) `SharpPagesFeature` which
 allows [scripting of all .NET Types](https://sharpscript.net/docs/script-net#allowscriptingofalltypes) by default. 
 
 #### TechStacks TCP Lisp REPL Demo
@@ -1864,7 +1864,7 @@ Loading scripts within a Lisp script works similarly except they're only loaded 
 of which is created in each new `PageResult`.
 
 Scripts loaded locally are loaded from the `ScriptContext` configured [Virtual Files Provider](/virtual-file-system) 
-which for [#Script Pages](https://sharpscript.net/docs/sharp-pages) `SharpPagesFeature` is configured to use the App's cascading virtual file sources. 
+which for [#Script Pages](https://sharpscript.net/docs/script-pages) `SharpPagesFeature` is configured to use the App's cascading virtual file sources. 
 
 A new `ScriptContext` starts with an empty [MemoryVirtualFiles](/virtual-file-system#virtual-file-systems-available)
 which you can write files to with:
