--- a/docs/releases/v5_9.md
+++ b/docs/releases/v5_9.md
@@ -477,7 +477,7 @@ multiple querying options, paging, multi OrderBy's in a parameterized SQL query 
 ```
 :::
 
-The `_` prefixes in the path utilizes [Page Based Routing](https://sharpscript.net/docs/sharp-pages#page-based-routing) allowing for 
+The `_` prefixes in the path utilizes [Page Based Routing](https://sharpscript.net/docs/script-pages#page-based-routing) allowing for 
 [CoC](https://en.wikipedia.org/wiki/Convention_over_configuration) based 
 [Clean URL](https://en.wikipedia.org/wiki/Clean_URL) routes without needing to define & maintain separate routes where the
 same script supports querying all [registered multitenancy databases](/multitenancy#changedb-apphost-registration).
@@ -1209,7 +1209,7 @@ We can then create a base Request DTO that all Audit Create Services will implem
 [AutoPopulate(nameof(IAudit.ModifiedInfo), Eval = "`${userSession.DisplayName} (${userSession.City})`")]
 public abstract class CreateAuditBase<Table,TResponse> : ICreateDb<Table>, IReturn<TResponse> {}
 ```
-These all call [#Script Methods](https://sharpscript.net/docs/methods) which you can [add/extend yourself](https://sharpscript.net/docs/sharp-pages#extend).
+These all call [#Script Methods](https://sharpscript.net/docs/methods) which you can [add/extend yourself](https://sharpscript.net/docs/script-pages#extend).
 
 The `*Info` examples is a superfluous example showing that you can basically evaluate any `#Script` expression. Typically you'd only save User Id or Username
 
@@ -1863,7 +1863,7 @@ public class MyValidateScripts : ScriptMethods
 }
 ```
 
-Which can be registered, either directly on your [Script Pages plugin](https://sharpscript.net/docs/sharp-pages) if your AppHost uses one:
+Which can be registered, either directly on your [Script Pages plugin](https://sharpscript.net/docs/script-pages) if your AppHost uses one:
 
 ```csharp
 Plugins.Add(new SharpPagesFeature {
@@ -4145,7 +4145,7 @@ Config.HandlerFactoryPath //= api
 When necessary the `PathBase` property is available in both server rendered views:
 
 ::: v-pre
-  - `{{PathBase}}` variable in [#Script Pages](https://sharpscript.net/docs/sharp-pages)
+  - `{{PathBase}}` variable in [#Script Pages](https://sharpscript.net/docs/script-pages)
   - `PathBase` in Razor Views
 :::
 
