--- a/docs/releases/v6_1.md
+++ b/docs/releases/v6_1.md
@@ -410,7 +410,7 @@ API DTO Contracts of their surrounding AutoQuery & CRUD APIs. The Data and Servi
 
 ## Custom Forms
 
-The **Chinook** Locode App also showcases of how to implement an enhanced UX beyond Locode's default UI to create [Custom Forms](/locode/custom-forms.html) for its `Albums` table by creating custom HTML & JS Components which is loaded directly in Locode.
+The **Chinook** Locode App also showcases of how to implement an enhanced UX beyond Locode's default UI to create [Custom Forms](/locode/custom-forms) for its `Albums` table by creating custom HTML & JS Components which is loaded directly in Locode.
 
 To override Locode's built-in Form UI you can add custom [PetiteVue](https://github.com/vuejs/petite-vue) HTML components 
 to your Host Project **/wwwroot** folder at `/modules/locode/custom.html` using the naming conventions below:
@@ -726,7 +726,7 @@ function stylize(val, options) {
 
 Which makes use of [JSDoc](https://jsdoc.app) and
 [TypeScript's JSDoc](https://www.typescriptlang.org/docs/handbook/jsdoc-supported-types.html)
-support to [enable rich static analysis](custom).
+support to [enable rich static analysis](/locode/custom).
 
 ## Hybrid Locode Apps
 
@@ -1829,5 +1829,18 @@ But developers who've specified custom API Forms will need to transition to the 
 
 ```csharp
 appHost.ConfigureOperation<Register>(op => op.FormLayout = Input.FromGridLayout(...));
+```
+
+### @servicestack/client upgraded to ES2015
+
+The target for [@servicestack/client](https://github.com/ServiceStack/servicestack-client/) has been upgraded to **ES2015** which results in cleaner & leaner code generation with fewer polyfills to workaround missing JavaScript features.
+
+This does mean that it no longer supports **Internet Explorer 11** which was released in 2013. 
+The last version supporting **ES5** and Internet Explorer is **1.1.21**:
+
+```json
+"dependencies": {
+    "@servicestack/client": "~1.1.21"
+},
 ```
 
