--- a/docs/releases/v5_5.md
+++ b/docs/releases/v5_5.md
@@ -2694,7 +2694,7 @@ Results matching tag [project]:
 Search:  web + #<tag> Available tags: auth, config, db, example, lib, project, react, sharp, ui, vue
 ```
 
-Which can be chained together to search for all `project` and `sharp` gists we can use for [#Script Pages](https://sharpscript.net/docs/sharp-pages) projects:
+Which can be chained together to search for all `project` and `sharp` gists we can use for [#Script Pages](https://sharpscript.net/docs/script-pages) projects:
 
     $ web + #project,sharp
 
@@ -3907,7 +3907,7 @@ This is enabled in your pages with this snippet which renders the hot reload cli
 :::
 
 Which starts a long poll that calls the smart `HotReloadFilesService` which recursively inspects the current tokenized 
-[#Script Pages](https://sharpscript.net/docs/sharp-pages) to find if it or any dependent layouts, partials or file includes have changed.
+[#Script Pages](https://sharpscript.net/docs/script-pages) to find if it or any dependent layouts, partials or file includes have changed.
 
 Sharp Page's Hot Reload feature now also monitors **Paged Based Routing Pages** and **View Pages**.
 
