rename to www.locode.dev

--- a/docs/releases/v6_1.md
+++ b/docs/releases/v6_1.md
@@ -4,7 +4,7 @@ title: ServiceStack v6.1
 
 <link rel="stylesheet" href="/css/release.css">
 
-We're excited to announce [locode.dev](https://locode.dev), our **Rapid Application Development** solution to quickly develop 
+We're excited to announce [locode.dev](https://www.locode.dev), our **Rapid Application Development** solution to quickly develop 
 beautiful Full Stack CRUD Apps around **AutoQuery APIs**, suitable for a wide number of use-cases including:
 
 - Rapid prototyping by creating an instant UI around existing **Database-First** RDBMS tables
@@ -226,7 +226,7 @@ simple POCOs to define the precise schema of the underlying RDBMS tables and its
 
  - Productive end-to-end [typed Development Model in 9 languages](https://servicestack.net/service-reference)
  - [Declarative Dev Model](/locode/declarative) for defining Authentication, Validation, Documentation & UI Customizations
- - Beautiful, UX-Friendly, capability-based Customizable UI in [Locode](https://locode.dev)
+ - Beautiful, UX-Friendly, capability-based Customizable UI in [Locode](https://www.locode.dev)
  - Rich analysis, API discoverability & [simplified client integrations](https://docs.servicestack.net/api-explorer#code-tab) in [API Explorer](https://docs.servicestack.net/api-explorer)
  - Powerful querying capabilities in [AutoQuery](https://docs.servicestack.net/autoquery)
  - Full executable [Audit History Tracking](https://docs.servicestack.net/autoquery-audit-log)
@@ -447,7 +447,7 @@ For more information & a detailed walkthrough see the [Custom Forms Docs](/locod
 
 ## Custom Fields and Inputs
 
-These attributes can be used to customize how fields and HTML Input controls in the Auto Form UIs in [Locode](https://locode.dev)
+These attributes can be used to customize how fields and HTML Input controls in the Auto Form UIs in [Locode](https://www.locode.dev)
 and [API Explorer](/api-explorer)
 
 | Attribute       | Description                                                               |
@@ -648,7 +648,7 @@ Type definitions for all functionality available in ServiceStack UI's are publis
 
 | UI                                                       | Description                                                                                                  |
 |----------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|
-| [locode](https://api.locode.dev/modules/locode.html)     | Global App and Type instances available in [Locode Apps](https://locode.dev)                                 |
+| [locode](https://api.locode.dev/modules/locode.html)     | Global App and Type instances available in [Locode Apps](https://www.locode.dev)                                 |
 | [explorer](https://api.locode.dev/modules/explorer.html) | Global App and Type instances available in [API Explorer](/api-explorer)        |
 | [admin](https://api.locode.dev/modules/admin.html)       | Global App and Type instances available in ServiceStack's [Admin UI](/admin-ui) |
 
